--- a/src/00-introduccion.html
+++ b/src/00-introduccion.html
@@ -564,8 +564,8 @@
           pero que todas las personas tienen la misma dignidad y merecen
           respeto. <br />… reﬂexionaron acerca de la importancia de poder
           ubcarse contextualmente y relacionarse con respeto a los demás.<br />…
-          reconocieron la relevancia de no discriminar, ni hacer diferencias
-          con sus compañeros y otras personas.
+          reconocieron la relevancia de no discriminar, ni hacer diferencias con
+          sus compañeros y otras personas.
         </td>
       </tr>
     </table>
@@ -734,9 +734,9 @@
         <td>Lugares-Tiempos</td>
         <td>
           ... comprendieron el mensaje de esperanza del Reino de Dios que ya se
-          está construyendo y del cual forma parte.<br />… lograron identificarse
-          con un proyecto grupal que se construye paso a paso, aprendiendo a no
-          pretender todo de golpe ni detener sus esfuerzos.
+          está construyendo y del cual forma parte.<br />… lograron
+          identificarse con un proyecto grupal que se construye paso a paso,
+          aprendiendo a no pretender todo de golpe ni detener sus esfuerzos.
         </td>
       </tr>
       <tr>
@@ -793,8 +793,8 @@
     </p>
     <p>
       Luego de haber recorrido la etapa de ambientación, su compromiso e interés
-      por el exploradorismo es una llama que no sólo se mantendrá encendida
-      con un acompañamiento integral del grupo y comunidad, sino además con una
+      por el exploradorismo es una llama que no sólo se mantendrá encendida con
+      un acompañamiento integral del grupo y comunidad, sino además con una
       formación que lo ayude a encontrar respuestas en este momento de búsqueda
       de certezas. Tenemos en nuestras manos la posibilidad de consolidar el
       amor por el Siempre Listo como estilo de vida a través de la Ley de honor,
@@ -828,10 +828,10 @@
       formación.
     </p>
     <p>
-      Una vez identificada la consigna por su nombre y tema, proponemos, mediante
-      diversas técnicas y ejercicios prácticos evaluar si es conveniente
-      desarrollarla en este momento. Preguntarnos ¿Por qué elegimos esta
-      consigna? ¿Cuáles creemos que son las necesidades de nuestro grupo?
+      Una vez identificada la consigna por su nombre y tema, proponemos,
+      mediante diversas técnicas y ejercicios prácticos evaluar si es
+      conveniente desarrollarla en este momento. Preguntarnos ¿Por qué elegimos
+      esta consigna? ¿Cuáles creemos que son las necesidades de nuestro grupo?
     </p>
     <h3>2) LUEGO, “Y A VOS QUE TE PASA CON ESTE TEMA?”</h3>
     <p>
