--- a/src/01-confianza.html
+++ b/src/01-confianza.html
@@ -197,8 +197,8 @@
       La confianza se construye: La confianza es algo que se va generando con el
       tiempo y en base a las actitudes y acciones de las personas. Puede tomar
       mucho tiempo ganarse la confianza del otro. Con algunas acciones podemos
-      perderla, pero no quiere decir que no podamos recuperarla siempre y
-      cuando modifiquemos nuestra actitud.
+      perderla, pero no quiere decir que no podamos recuperarla siempre y cuando
+      modifiquemos nuestra actitud.
     </p>
     <p>
       No hay que confundir confianza con “me cae bien”. Por supuesto que el
