--- a/src/03-afectividad.html
+++ b/src/03-afectividad.html
@@ -458,8 +458,8 @@
       Una forma de distinguir estas actitudes es preguntarse si lo mismo que
       decimos de alguien cuando no está, lo diríamos en su presencia. O también,
       si fuimos capaces de hablar de aguien en su ausencia, cuando lo veamos
-      decírselo personalmente. Si bien no es la mejor solución, al menos ayuda
-      a ser auténticos y no relacionarnos con “caretas”.
+      decírselo personalmente. Si bien no es la mejor solución, al menos ayuda a
+      ser auténticos y no relacionarnos con “caretas”.
     </p>
     <p>
       Por otro lado y partiendo desde la premisa que el grupo es un lugar de
@@ -633,8 +633,8 @@
     <h4>- Orientación:</h4>
     <p>
       La idea de esta actividad es indagar acerca de las experiencias que han
-      tenido o que recientemente hayan pasado los Rastreadores Hogueras
-      respecto al noviazgo.
+      tenido o que recientemente hayan pasado los Rastreadores Hogueras respecto
+      al noviazgo.
     </p>
     <h4>- Actividad:</h4>
     <p>Motivar escuchando la canción “Somos novios”</p>
@@ -721,8 +721,8 @@
       </li>
       <li>
         <strong>Tendencia a la idealización:</strong> en lugar de ir creciendo
-        en el descubrimiento del otro, la idealización nos hace ver en el
-        otro, una persona perfecta, la qué sólo existe en nuestra fantasía.
+        en el descubrimiento del otro, la idealización nos hace ver en el otro,
+        una persona perfecta, la qué sólo existe en nuestra fantasía.
       </li>
       <li>
         <strong>Tendencia al “realismo estático”:</strong> esto sucede, cuando
@@ -982,8 +982,8 @@
     <h4>- Reflexión:</h4>
     <p>
       La amistad y el noviazgo son dos cosas diferentes. Si bien es aconsejable
-      tener muchos amigos, no sucede lo mismo en cambio con la idea de tener
-      más de un novio o novia.
+      tener muchos amigos, no sucede lo mismo en cambio con la idea de tener más
+      de un novio o novia.
     </p>
     <p>
       Puede darse que el noviazgo venga como consecuencia de una amistad, pero
@@ -992,8 +992,8 @@
     </p>
     <p>
       Lo más común es tener amigos del otro sexo, compartir muchas cosas, tener
-      mucha confianza y esto no tiene nada que ver con la posibilidad de
-      llegar a ser novios.
+      mucha confianza y esto no tiene nada que ver con la posibilidad de llegar
+      a ser novios.
     </p>
     <p>
       Para el noviazgo, aparte de la comunión de ideas, sinceridad, buen diálogo
@@ -1137,8 +1137,8 @@
       “Antes que lo haga con otra, que lo haga conmigo”. Puede tener también
       otras motivaciones como desear afirmar su poder de conquista y seducción,
       de revlorizarse ante sus compañeras “Yo también puedo”, como una forma de
-      fortalecer su autonomía y libertad respecto de la autoridad familiar o
-      de suplir la carencia de afecto en su familia.
+      fortalecer su autonomía y libertad respecto de la autoridad familiar o de
+      suplir la carencia de afecto en su familia.
     </p>
     <p>
       La primera relación sexual es una experiencia generalmente muy frustrante.
@@ -1348,9 +1348,9 @@
           Sus manos, brazaletes de oro, adornados con piedras de Tarsis. Su
           vientre, un bloque de marfil, todo incrustado de zafiros. Sus piernas,
           columnas de alabastro, asentadas sobre bases de oro puro. Su aspecto
-          es como el Líbano, esbelto como los cedros. Su paladar rebosa
-          dulzura y todo en él es una delicia. Así es mi amado, así es mi amigo,
-          hĳas de Jerusalén.»
+          es como el Líbano, esbelto como los cedros. Su paladar rebosa dulzura
+          y todo en él es una delicia. Así es mi amado, así es mi amigo, hĳas de
+          Jerusalén.»
         </em>
       </p>
     </div>
