--- a/src/02-compartir.html
+++ b/src/02-compartir.html
@@ -59,9 +59,9 @@
     <p>
       Cada uno del grupo tiene problemas distintos, como también son distintos
       los talentos que tenemos, pero tengamos la seguridad que sea cual sea la
-      dificultad, mediante el compartir se la puede llevar adelante. En la medida
-      que el grupo tiene la capacidad de compartir los problemas de cada uno
-      se fortalece su unidad.
+      dificultad, mediante el compartir se la puede llevar adelante. En la
+      medida que el grupo tiene la capacidad de compartir los problemas de cada
+      uno se fortalece su unidad.
     </p>
     <h2>TU MOMENTO</h2>
     <p>“¿Y a vos qué te pasa con este tema?”</p>
@@ -194,8 +194,8 @@
       que de hecho nunca pasó de ser un conjunto de casas que actualmente se
       estaban despoblando. No le costó conseguir permiso para pasar la noche al
       reparo de uno de los grandes galpones de cinc. Allí hizo un fueguito, y en
-      un tarro que oficiaba de ollita recalentó el estofado que le habían dado al
-      mediodía en la estancia dode pasara la mañana. Reconfortado por dentro,
+      un tarro que oficiaba de ollita recalentó el estofado que le habían dado
+      al mediodía en la estancia dode pasara la mañana. Reconfortado por dentro,
       preparó su cama: un trozo de plástico negro como colchón que evitaba la
       humedad. Encima dos o tres bolsas que llevaba en el mono, más un par de
       otras que encontró allí. Para taparse tenía una cobĳa vieja, escasa de
@@ -293,8 +293,8 @@
     <p>
       A veces se me ocurre pensar que si Dios nos mostrara las cruces que llevan
       los demás, y nos ofreciera cambiar la nuestra, cualquiera de ellas, muy
-      pocos aceptaríamos la oferta. Nos seguiríamos quejando lo mismo, pero
-      nos negaríamos a cambiarla. No lo haríamos, ni dormidos.
+      pocos aceptaríamos la oferta. Nos seguiríamos quejando lo mismo, pero nos
+      negaríamos a cambiarla. No lo haríamos, ni dormidos.
     </p>
 
     <ol start="6">
@@ -442,8 +442,8 @@
       Hay gente alrededor nuestro que está para ayudarnos, desde diferentes
       lugares y diferentes roles. Siempre no vamos a poder completamente solos,
       en momentos va a ser necesario pedir auxilio. Y, lo que también es muy
-      importante, nosotros mismos muchas veces somos de soporte y ayuda para
-      la construcción del puente de otra persona.
+      importante, nosotros mismos muchas veces somos de soporte y ayuda para la
+      construcción del puente de otra persona.
     </p>
     <div class="god">
       <h3>Palabra de Dios: “Cargue su cruz y me siga” (MI. 16,24-26)</h3>
@@ -459,8 +459,8 @@
 
     <p>
       Este momento es ideal para realizar la final de una larga jornada como un
-      paseo o campamento, pero podes adaptarla al final de un día de
-      actividades “común”
+      paseo o campamento, pero podes adaptarla al final de un día de actividades
+      “común”
     </p>
     <h4>- Se comparte:</h4>
     <p>
