--- a/src/01-confianza.html
+++ b/src/01-confianza.html
@@ -2,6 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <link rel=”stylesheet” type=”text/css” href=”style.css”>
   </head>
   <body>
     <h1>CONFIANZA</h1>
