--- a/src/00-introduccion.html
+++ b/src/00-introduccion.html
@@ -2,11 +2,14 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <h1>INTRODUCCIÓN</h1>
@@ -311,14 +314,18 @@
     </h3>
     <table>
       <tr>
+        <th>Comisión</th>
+        <th>CEN</th>
+      </tr>
+      <tr>
         <td>
-          <strong>Comisión</strong> <br />Germán Casas (Almagro)<br />
+          Germán Casas (Almagro)<br />
           Laura Jimenez (San Justo)<br />
           Martín Cafiero (Congreso)<br />
           Pamela Merino (Córdoba)<br />
         </td>
         <td>
-          <strong><em>CEN</em></strong> <br />Yésica Ozuna - Jefa Nacional
+          Yésica Ozuna - Jefa Nacional
           <br />Federico Torossian (2010-2015) Jefe Nacional <br />Leonel Mantia
           (2016-2018)- Jefe Nacional.<br />
           Héctor Arismende, sdb - Capellán Nacional
@@ -327,14 +334,14 @@
     </table>
     <table>
       <tr>
-        <td>
-          <strong>Diseño y diagramación</strong> <br />Guadalupe Goicochea
-        </td>
-        <td>
-          <strong>Dibujantes</strong> <br />María Belén Giancristiano (tapa y
-          contratapa)
-        </td>
-        <td><strong>Edición</strong> <br />Imprenta La Piedad</td>
+        <th>Diseño y diagramación</th>
+        <th>Dibujantes</th>
+        <th>Edición</th>
+      </tr>
+      <tr>
+        <td>Guadalupe Goicochea</td>
+        <td>María Belén Giancristiano (tapa y contratapa)</td>
+        <td>Imprenta La Piedad</td>
       </tr>
     </table>
     <h2>OPCIONES FUNDAMENTALES DEL LIBRO</h2>
@@ -444,7 +451,7 @@
         <th><strong>Objetivo: Los Rastreadores-Hogueras...</strong></th>
       </tr>
       <tr>
-        <td><strong>1. Confianza</strong></td>
+        <td><strong>1.&nbsp;Confianza</strong></td>
         <td>Amistad</td>
         <td>Lugares-Tiempos</td>
         <td>
@@ -455,7 +462,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>2. Compartir</strong></td>
+        <td><strong>2.&nbsp;Compartir</strong></td>
         <td>Familia</td>
         <td>Lugares-Tiempos</td>
         <td>
@@ -466,7 +473,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>3. Afectividad</strong></td>
+        <td><strong>3.&nbsp;Afectividad</strong></td>
         <td>Amistad</td>
         <td>Lugares-Tiempos</td>
         <td>
@@ -479,7 +486,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>4. Amistad</strong></td>
+        <td><strong>4.&nbsp;Amistad</strong></td>
         <td>Amistad</td>
         <td>Identidad</td>
         <td>
@@ -492,7 +499,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>5. Familia</strong></td>
+        <td><strong>5.&nbsp;Familia</strong></td>
         <td>Familia</td>
         <td>Identidad</td>
         <td>
@@ -502,7 +509,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>6. Diálogo</strong></td>
+        <td><strong>6.&nbsp;Diálogo</strong></td>
         <td>Familia</td>
         <td>Lugares-Tiempos</td>
         <td>
@@ -512,10 +519,8 @@
           personas de la comunidad.
         </td>
       </tr>
-    </table>
-    <table>
       <tr>
-        <td><strong>7. Oración</strong></td>
+        <td><strong>7.&nbsp;Oración</strong></td>
         <td>Amistad</td>
         <td>Experiencias religiosas</td>
         <td>
@@ -531,7 +536,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>8. Crecimiento</strong></td>
+        <td><strong>8.&nbsp;Crecimiento</strong></td>
         <td>Proyecto de vida</td>
         <td>Identidad</td>
         <td>
@@ -546,7 +551,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>9. Perdón</strong></td>
+        <td><strong>9.&nbsp;Perdón</strong></td>
         <td>Familia</td>
         <td>Experiencias religiosas</td>
         <td>
@@ -560,7 +565,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>10. Respeto</strong></td>
+        <td><strong>10.&nbsp;Respeto</strong></td>
         <td>Amistad</td>
         <td>Identidad</td>
         <td>
@@ -573,10 +578,8 @@
           sus compañeros y otras personas.
         </td>
       </tr>
-    </table>
-    <table>
       <tr>
-        <td><strong>11. Verdad</strong></td>
+        <td><strong>11.&nbsp;Verdad</strong></td>
         <td>Amistad</td>
         <td>Lugares-Tiempos</td>
         <td>
@@ -587,7 +590,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>12. Fe</strong></td>
+        <td><strong>12.&nbsp;Fe</strong></td>
         <td>Amistad</td>
         <td>Identidad</td>
         <td>
@@ -599,7 +602,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>13. Conciencia</strong></td>
+        <td><strong>13.&nbsp;Conciencia</strong></td>
         <td>Proyecto de vida</td>
         <td>Identidad</td>
         <td>
@@ -610,7 +613,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>14. Crítica</strong></td>
+        <td><strong>14.&nbsp;Crítica</strong></td>
         <td>Familia</td>
         <td>Identidad</td>
         <td>
@@ -623,7 +626,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>15. Identidad</strong></td>
+        <td><strong>15.&nbsp;Identidad</strong></td>
         <td>Proyecto de vida</td>
         <td>Identidad</td>
         <td>
@@ -634,7 +637,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>16. Obediencia</strong></td>
+        <td><strong>16.&nbsp;Obediencia</strong></td>
         <td>Familia</td>
         <td>Identidad</td>
         <td>
@@ -646,10 +649,8 @@
           responsabilidad a sus padres, mayores y responsables.
         </td>
       </tr>
-    </table>
-    <table>
       <tr>
-        <td><strong>17. Solidaridad</strong></td>
+        <td><strong>17.&nbsp;Solidaridad</strong></td>
         <td>Proyecto de vida</td>
         <td>Lugares-Tiempos</td>
         <td>
@@ -662,7 +663,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>18. Santidad</strong></td>
+        <td><strong>18.&nbsp;Santidad</strong></td>
         <td>Proyecto de vida</td>
         <td>Identidad</td>
         <td>
@@ -680,7 +681,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>19. Testimonio</strong></td>
+        <td><strong>19.&nbsp;Testimonio</strong></td>
         <td>Proyecto de vida</td>
         <td>Experiencias religiosas</td>
         <td>
@@ -694,7 +695,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>20. Corresponsabilidad</strong></td>
+        <td><strong>20.&nbsp;Corresponsabilidad</strong></td>
         <td>Familia</td>
         <td>Lugares-Tiempos</td>
         <td>
@@ -707,7 +708,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>21. Naturaleza</strong></td>
+        <td><strong>21.&nbsp;Naturaleza</strong></td>
         <td>Amistad</td>
         <td>Experiencias religiosas</td>
         <td>
@@ -720,10 +721,8 @@
           tierras.
         </td>
       </tr>
-    </table>
-    <table>
       <tr>
-        <td><strong>22. Vida</strong></td>
+        <td><strong>22.&nbsp;Vida</strong></td>
         <td>Familia</td>
         <td>Experiencias religiosas</td>
         <td>
@@ -734,7 +733,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>23. Esperanza</strong></td>
+        <td><strong>23.&nbsp;Esperanza</strong></td>
         <td>Proyecto de vida</td>
         <td>Lugares-Tiempos</td>
         <td>
@@ -745,7 +744,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>24. Servicio</strong></td>
+        <td><strong>24.&nbsp;Servicio</strong></td>
         <td>Proyecto de vida</td>
         <td>Lugares-Tiempos</td>
         <td>
@@ -757,7 +756,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>25. Experiencia del agua</strong></td>
+        <td><strong>25.&nbsp;Experiencia del agua</strong></td>
         <td>Proyecto de vida</td>
         <td>Experiencias religiosas</td>
         <td>
@@ -770,7 +769,7 @@
         </td>
       </tr>
       <tr>
-        <td><strong>26. Renovación de la Promesa</strong></td>
+        <td><strong>26.&nbsp;Renovación de la Promesa</strong></td>
         <td></td>
         <td></td>
         <td>
