--- a/src/01-confianza.html
+++ b/src/01-confianza.html
@@ -2,7 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel=”stylesheet” type=”text/css” href=”style.css”>
+    <link rel="stylesheet" type="text/css" href="normalize.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Confianza</title>
   </head>
   <body>
     <h1>CONFIANZA</h1>
@@ -134,8 +136,8 @@
     </ul>
     <h2>ACTIVIDADES CENTRALES</h2>
     <ol>
-      <li><strong>Construcciones cruzadas</strong></li>
-      <li><strong>Muñecos de goma</strong></li>
+      <li>Construcciones cruzadas</li>
+      <li>Muñecos de goma</li>
     </ol>
     <h3>ACTIVIDAD 1: CONSTRUCCIONES CRUZADAS</h3>
 
