--- a/src/02-compartir.html
+++ b/src/02-compartir.html
@@ -2,7 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel=”stylesheet” type=”text/css” href=”style.css”>
+    <link rel="stylesheet" type="text/css" href="normalize.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Compartir</title>
   </head>
   <body>
     <h1>COMPARTIR</h1>
