--- a/src/03-afectividad.html
+++ b/src/03-afectividad.html
@@ -2,7 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel=”stylesheet” type=”text/css” href=”style.css”>
+    <link rel="stylesheet" type="text/css" href="normalize.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Afectividad</title>
   </head>
   <body>
     <h1>AFECTIVIDAD</h1>
@@ -806,101 +808,105 @@
       Los valores de uno y otro sexo son esencialmente complementarios,
       socialmente integrables y mutuamente enriquecedores.
     </p>
-    <h3>Palabra de Dios: Cartas 4, 1-16. El amado - La amada</h3>
-    <p><em> [El Amado] </em></p>
-    <p>
-      <em>
-        «¡Qué hermosa eres, amada mía, qué hermosa eres! Tus ojos son palomas,
-        detrás de tu velo. Tus cabellos, como un rebaño de cabras que baja por
-        las laderas de Galaad.
-      </em>
-    </p>
-    <p>
-      <em>
-        Tus dientes, como un rebaño de ovejas esquiladas que acaban de bañarse:
-        todas ellas han tenido mellizos y no hay ninguna estéril.
-      </em>
-    </p>
-    <p>
-      <em>
-        Como una cinta escarlata son tus labios y tu boca es hermosa. Como
-        cortes de granada son tus mejillas, detrás de tu velo.
-      </em>
-    </p>
-    <p>
-      <em>
-        Tu cuello es como la torre de David, construida con piedras talladas: de
-        ella cuelgan mil escudos, toda clase de armaduras de guerreros.
-      </em>
-    </p>
-    <p>
-      <em>
-        Tus pechos son como dos ciervos jóvenes, mellizos de una gacela, que
-        pastan entre los lirios.
-      </em>
-    </p>
-    <p>
-      <em>
-        Antes que sople la brisa y huyan las sombras, iré a la montaña de la
-        mirra, a la colina del incienso.
-      </em>
-    </p>
-    <p><em> Eres toda hermosa, amada mía, y no tienes ningún defecto. </em></p>
-    <p>
-      <em>
-        ¡Ven conmigo del Líbano, novia mía, ven desde el Líbano! Desciende desde
-        la cumbre del Amaná, desde las cimas del Sanir y del Hermón, desde la
-        guarida de los leones, desde los montes de los leopardos.
-      </em>
-    </p>
-    <p>
-      <em>
-        ¡Me has robado el corazón hermana mía, novia mía! ¡Me has robado el
-        corazón con una sola de tus miradas, con una sola vuelta de tus
-        collares!
-      </em>
-    </p>
-    <p><em> ¡Qué hermosos son tus amores, hermana mía, novia mía! </em></p>
-    <p>
-      <em>
-        Tus amores son más deliciosos que el vino, y el aroma de tus perfumes,
-        mejor que todos los ungüentos.
-      </em>
-    </p>
-    <p>
-      <em>
-        ¡Tus labios destilan miel pura, novia mía! Hay miel y leche bajo tu
-        lengua, y la fragancia de tus vestidos es como el aroma del Líbano.
-      </em>
-    </p>
-    <p>
-      <em>
-        Eres un jardín cerrado hermana mía, novia mía; eres un jardín cerrado,
-        una fuente sellada.
-      </em>
-    </p>
-    <p>
-      <em>
-        Tus brotes son un vergel de granadas, con frutos exquisitos: alheña con
-        nardos, nardo y azafrán, caña aromática y canela, con todos los árboles
-        de incienso, mirra y áloe, con los mejores perfumes.
-      </em>
-    </p>
-    <p>
-      <em>
-        ¡Fuente que riega los jardines, manantial de agua viva, que fluye desde
-        el Líbano!»
-      </em>
-    </p>
-    <br />
-    <p><em> [La Amada] </em></p>
-    <p>
-      <em>
-        «¡Despierta, viento del norte, ven, viento del sur! ¡Soplen sobre mi
-        jardín para que exhale su perfume! ¡Que mi amado entre en su jardín y
-        saboree sus frutos deliciosos!»
-      </em>
-    </p>
+    <div class="god">
+      <h3>Palabra de Dios: Cartas 4, 1-16. El amado - La amada</h3>
+      <p><em> [El Amado] </em></p>
+      <p>
+        <em>
+          «¡Qué hermosa eres, amada mía, qué hermosa eres! Tus ojos son palomas,
+          detrás de tu velo. Tus cabellos, como un rebaño de cabras que baja por
+          las laderas de Galaad.
+        </em>
+      </p>
+      <p>
+        <em>
+          Tus dientes, como un rebaño de ovejas esquiladas que acaban de
+          bañarse: todas ellas han tenido mellizos y no hay ninguna estéril.
+        </em>
+      </p>
+      <p>
+        <em>
+          Como una cinta escarlata son tus labios y tu boca es hermosa. Como
+          cortes de granada son tus mejillas, detrás de tu velo.
+        </em>
+      </p>
+      <p>
+        <em>
+          Tu cuello es como la torre de David, construida con piedras talladas:
+          de ella cuelgan mil escudos, toda clase de armaduras de guerreros.
+        </em>
+      </p>
+      <p>
+        <em>
+          Tus pechos son como dos ciervos jóvenes, mellizos de una gacela, que
+          pastan entre los lirios.
+        </em>
+      </p>
+      <p>
+        <em>
+          Antes que sople la brisa y huyan las sombras, iré a la montaña de la
+          mirra, a la colina del incienso.
+        </em>
+      </p>
+      <p>
+        <em> Eres toda hermosa, amada mía, y no tienes ningún defecto. </em>
+      </p>
+      <p>
+        <em>
+          ¡Ven conmigo del Líbano, novia mía, ven desde el Líbano! Desciende
+          desde la cumbre del Amaná, desde las cimas del Sanir y del Hermón,
+          desde la guarida de los leones, desde los montes de los leopardos.
+        </em>
+      </p>
+      <p>
+        <em>
+          ¡Me has robado el corazón hermana mía, novia mía! ¡Me has robado el
+          corazón con una sola de tus miradas, con una sola vuelta de tus
+          collares!
+        </em>
+      </p>
+      <p><em> ¡Qué hermosos son tus amores, hermana mía, novia mía! </em></p>
+      <p>
+        <em>
+          Tus amores son más deliciosos que el vino, y el aroma de tus perfumes,
+          mejor que todos los ungüentos.
+        </em>
+      </p>
+      <p>
+        <em>
+          ¡Tus labios destilan miel pura, novia mía! Hay miel y leche bajo tu
+          lengua, y la fragancia de tus vestidos es como el aroma del Líbano.
+        </em>
+      </p>
+      <p>
+        <em>
+          Eres un jardín cerrado hermana mía, novia mía; eres un jardín cerrado,
+          una fuente sellada.
+        </em>
+      </p>
+      <p>
+        <em>
+          Tus brotes son un vergel de granadas, con frutos exquisitos: alheña
+          con nardos, nardo y azafrán, caña aromática y canela, con todos los
+          árboles de incienso, mirra y áloe, con los mejores perfumes.
+        </em>
+      </p>
+      <p>
+        <em>
+          ¡Fuente que riega los jardines, manantial de agua viva, que fluye
+          desde el Líbano!»
+        </em>
+      </p>
+      <br />
+      <p><em> [La Amada] </em></p>
+      <p>
+        <em>
+          «¡Despierta, viento del norte, ven, viento del sur! ¡Soplen sobre mi
+          jardín para que exhale su perfume! ¡Que mi amado entre en su jardín y
+          saboree sus frutos deliciosos!»
+        </em>
+      </p>
+    </div>
     <h3>ACTIVIDAD N° 5: BÚSQUEDA ORIENTADA DEL TESORO</h3>
     <h4>- Orientación:</h4>
     <p>
